--- a/index.html
+++ b/index.html
@@ -2,3 +2,8 @@
 layout: home
 # Index page
 ---
+
+<div class="welcome">
+    <h1>Welcome to My Website</h1>
+    <p>This is the homepage of my awesome website powered by Rafael Martin Alves Ferreira.</p>
+  </div>
